--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "wangyanqi/avatar",
+    "name": "wangyanqi/csavatar",
     "description": "ds",
     "type": "library",
     "require": {
